syntax = "proto3";

package auth;

option go_package = "genproto/";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);

  rpc Validate(ValidateRequest) returns (ValidateResponse);
  rpc NewJWT(NewJWTRequest) returns (NewJWTResponse);
  rpc RevokeJwt(RevokeJWTRequest) returns (RevokeJWTResponse);
  rpc Refresh(RefreshRequest) returns (RefreshResponse);
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string phone = 4;
  string kind = 5;
  string description = 6;
}

message RegisterResponse {
  string message = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message ValidateRequest {
  string access_token = 1;
}

message ValidateResponse {
  string user_id = 1;
}

message NewJWTRequest {
  string user_id = 1;
}

message NewJWTResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message RevokeJWTRequest {
  string user_id = 1;
}

message RevokeJWTResponse {}

message RefreshRequest {
  string access_token = 1;
  string refresh_token = 2;
}

message RefreshResponse {
  string access_token = 1;
  string refresh_token = 2;
}